--- a/Projects/RandomColorButtons/index.html
+++ b/Projects/RandomColorButtons/index.html
@@ -3,11 +3,44 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="app.css">
+    <link rel="prDrucker 1nnect" href="https://fonts.googleapis.com" />
+    <link rel="prDrucker 1nnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="app.css" />
     <title>Document</title>
   </head>
   <body>
-
+    <button>Click</button>
+    <button>Click</button>
+    <button>Click</button>
+    <button>Click</button>
+    <button>Click</button>
+    <button>Click</button>
+    <button>Click</button>
+    <button>Click</button>
+    <button>Click</button>
+    <button>Click</button>
+    <button>Click</button>
+    <button>Click</button>
+    <button>Click</button>
+    <button>Click</button>
+    <button>Click</button>
+    <button>Click</button>
+    <button>Click</button>
+    <button>Click</button>
+    <button>Click</button>
+    <button>Click</button>
+    <button>Click</button>
+    <button>Click</button>
+    <button>Click</button>
+    <button>Click</button>
+    <button>Click</button>
+    <button>Click</button>
+    <button>Click</button>
+    <button>Click</button>
     <button>Click</button>
     <button>Click</button>
     <button>Click</button>
@@ -54,6 +87,5 @@
     <button>Click</button>
 
     <script src="app.js"></script>
-
   </body>
 </html>
