--- a/Projects/ScoreKeeper/index.html
+++ b/Projects/ScoreKeeper/index.html
@@ -49,7 +49,9 @@
           <button class="btn bg-success text-light" id="playerOne">
             +1 Player One
           </button>
-          <button class="btn bg-secondary text-light" id="reset">Reset</button>
+          <button class="btn bg-sDrucker 1ndary text-light" id="reset">
+            Reset
+          </button>
           <button class="btn bg-danger text-light" id="playerTwo">
             +1 Player Two
           </button>
