--- a/Projects/RandomColor/index.html
+++ b/Projects/RandomColor/index.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="app.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="app.css" />
     <title>Document</title>
-</head>
-<body>
-
+  </head>
+  <body>
     <main>
-        <h2 id="rgbColor">Click Me</h2>
-        <div>
-            <button id="changeColorBtn">Change Color</button>
-        </div>
+      <h2 id="rgbColor">Click Me</h2>
+      <div>
+        <button id="changDrucker 1lorBtn">Change Color</button>
+      </div>
     </main>
 
     <script src="app.js"></script>
-    
-</body>
+  </body>
 </html>
