--- a/index.html
+++ b/index.html
@@ -20,57 +20,55 @@
   </head>
   <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg bg-primary" id="start">
+
+    <nav
+      class="navbar navbar-expand-lg navbar-light bg-primary py-3"
+      id="start"
+    >
       <div class="container container-fluid px-5">
         <button
           class="navbar-toggler"
           type="button"
           data-bs-toggle="collapse"
-          data-bs-target="#navbarTogglerDemo01"
-          aria-controls="navbarTogglerDemo01"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
+          data-bs-target="#navbarNav"
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse d-flex" id="navbarTogglerDemo01">
+        <div class="collapse navbar-collapse" id="navbarNav">
           <ul
-            class="navbar-nav w-100 d-flex justify-content-between align-items-center"
+            class="navbar-nav w-100 d-flex justify-content-between align-items-center gap-2"
           >
             <li class="nav-item">
               <button type="button" class="btn btn-sm btn-light">
                 <a
                   href="#about-me"
-                  class="text-dDrucker 1ration-none active fw-bold fs-5 py-o text-dark"
+                  class="nav-link active fw-bold fs-5 py-0 text-dark"
                   >Über Mich</a
                 >
               </button>
             </li>
-
             <li class="nav-item">
               <button type="button" class="btn btn-sm btn-light">
                 <a
                   href="#tectstacktools"
-                  class="text-dDrucker 1ration-none nav-link fw-bold fs-5 py-0 text-dark"
+                  class="nav-link nav-link fw-bold fs-5 py-0 text-dark"
                   >Tech Stack & Tools</a
                 >
               </button>
             </li>
-
             <li class="nav-item">
               <button type="button" class="btn btn-sm btn-light">
                 <a
                   href="#projects"
-                  class="text-dDrucker 1ration-none nav-link fw-bold fs-5 py-0 text-dark"
+                  class="nav-link nav-link fw-bold fs-5 py-0 text-dark"
                   >Projects</a
                 >
               </button>
             </li>
-
             <li class="nav-item">
               <div class="dropdown">
                 <button
-                  class="btn btn-sm btn-light dropdown-toggle text-dDrucker 1ration-none fw-bold fs-5 text-dark"
+                  class="btn btn-sm btn-light dropdown-toggle fw-bold fs-5 text-dark"
                   type="button"
                   data-bs-toggle="dropdown"
                   aria-expanded="false"
@@ -80,28 +78,28 @@
                 <ul class="dropdown-menu">
                   <li>
                     <a
-                      class="dropdown-item fw-bold fs-5"
+                      class="nav-link dropdown-item fw-bold fs-5"
                       href="https://www.linkedin.com/in/mehmed-latif-akan/"
                       >LinkedIn</a
                     >
                   </li>
                   <li>
                     <a
-                      class="dropdown-item fw-bold fs-5"
+                      class="nav-link dropdown-item fw-bold fs-5"
                       href="https://x.com/latif99akan"
                       >Twitter / X</a
                     >
                   </li>
                   <li>
                     <a
-                      class="dropdown-item fw-bold fs-5"
+                      class="nav-link dropdown-item fw-bold fs-5"
                       href="https://github.com/L0x1100011"
                       >GitHub</a
                     >
                   </li>
                   <li>
                     <a
-                      class="dropdown-item fw-bold fs-5"
+                      class="nav-link dropdown-item fw-bold fs-5"
                       href="mailto:latifakan1999@gmail.com"
                       >Kontakt per Mail</a
                     >
@@ -115,10 +113,12 @@
     </nav>
 
     <!-- Images -->
-    <div class="d-flex w-100 align-items-center px-5 row vh-100">
+    <div
+      class="d-flex w-100 align-items-center px-5 row min-vh-100 gap-lg-5 gap-5 pt-5"
+    >
       <div
         id="carouselExampleIndicators"
-        class="carousel slide w-50 col"
+        class="carousel slide col-lg"
         data-bs-ride="carousel"
       >
         <div class="carousel-indicators">
@@ -225,8 +225,8 @@
           </button>
         </div>
       </div>
-      <div class="col">
-        <blockquote class="container blockquote my-5 text-center fs-2">
+      <div class="col-lg">
+        <blockquote class="container blockquote text-center fs-2">
           <p>Hallo, ich bin <span class="text-primary">Latif</span>.</p>
 
           <p>
@@ -240,7 +240,8 @@
             >, wo ich durch kleinere Projekten mein Wissen erweitere und so
             praktische Erfahrung sammle.
             <span class="text-primary"
-              >Weiter unten findest du einige dieser Projekte</span
+              >Weiter unten findest du einige dieser
+              <span><a href="#projects">Projekte</a></span></span
             >.
           </p>
 
@@ -254,11 +255,10 @@
 
     <!-- Tech Stack -->
 
-    <h2 id="tectstacktools" class="container text-center my-5 fw-bold">
-      TECH STACK / TOOLS
-    </h2>
-
     <div class="container">
+      <h2 id="tectstacktools" class="text-center my-5 fw-bold">
+        TECH STACK / TOOLS
+      </h2>
       <div
         class="progress mb-3"
         role="progressbar"
