--- a/Projects/PhoneCostComparision/index.html
+++ b/Projects/PhoneCostComparision/index.html
@@ -1,33 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TelefonkostenVergleich</title>
 
     <script src="./main.js"></script>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style.css" />
+  </head>
 
-</head>
+  <body>
+    <h1>Telefonanbietervergleich</h1>
+    <main>
+      <div id="input">
+        <h2>Anbieter A</h2>
+        <label for="drucker1" class="text">
+          Grundgebühr:
+          <input id="idGrundgebührA" value="10.00" />
+        </label>
+        <label for="drucker1Kosten" class="text"
+          >Kosten pro Minute: <input id="idKostenProMinuteA" value="0.05" />€
+        </label>
 
-<body>
+        <h2>Anbieter B</h2>
 
-    <h1>Telefonanbietervergleich - Design Coming Soon :)</h1>
+        <label for="drucker2">
+          Grundgebühr:
+          <input id="idGrundgebührB" value="5.00" />€
+        </label>
 
-    Grundgebühr Anbieter A: <input id="idGrundgebührA" value="10.00">€ <br> <br> 
+        <label for="drucker2Kosten">
+          Kosten pro Minute:
+          <input id="idKostenProMinuteB" value="0.10" />€
+        </label>
 
-    Kosten pro tel. Minute: <input id="idKostenProMinuteA" value="0.05">€ <br> <br> 
-
-    Grundgebühr Anbieter B: <input id="idGrundgebührB" value="5.00">€ <br> <br> 
-
-    Kosten pro tel. Minute: <input id="idKostenProMinuteB" value="0.10">€ <br> <br> 
-
-    <button onclick="fRechne()">Kalkulieren!</button> 
-
-    <br><br>
-
-    <div id="idAusgabe"></div>
-    <div id="idAusgabe2"></div>
-
-</body>
+        <button onclick="fRechne()">Kalkulieren!</button>
+      </div>
+      <div id="output">
+        <h2>Berechnung der beiden Anbieter</h2>
+        <div id="idAusgabe"></div>
+        <div id="idAusgabe2"></div>
+      </div>
+    </main>
+  </body>
 </html>
