Added new project to website

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -114,7 +114,7 @@
 
     <!-- Images -->
     <div
-      class="d-flex w-100 align-items-center px-5 row min-vh-100 gap-lg-5 gap-5 pt-5"
+      class="d-flex w-100 align-items-center px-5 row min-vh-100 gap-lg-5 gap-5 py-5"
     >
       <div
         id="carouselExampleIndicators"
@@ -377,15 +377,17 @@
 
     <h2 id="projects" class="container text-center my-5 fw-bold">PROJEKTE</h2>
 
-    <main class="container mt-5">
+    <main class="container mt-5 projects">
       <div class="row row-cols-1 row-cols-md-2 g-4 mb-4">
         <div class="col">
           <div class="card h-100">
-            <img
-              src="/images/projectIMG/score-keeper.png"
-              class="card-img-top h-100"
-              alt="..."
-            />
+            <a href="/Projects/ScoreKeeper/index.html">
+              <img
+                src="/images/projectIMG/score-keeper.png"
+                class="card-img-top h-100"
+                alt="..."
+              />
+            </a>
             <div class="card-body">
               <h5 class="card-title text-center">Punktezähler</h5>
               <p class="card-text">
@@ -405,11 +407,13 @@
         </div>
         <div class="col">
           <div class="card h-100">
-            <img
-              src="/images/projectIMG/tesla-website.png"
-              class="card-img-top h-100"
-              alt="..."
-            />
+            <a href="/Projects/TeslaWebsite/TeslaHomepage/homepage.html">
+              <img
+                src="/images/projectIMG/tesla-website.png"
+                class="card-img-top h-100"
+                alt="..."
+              />
+            </a>
             <div class="card-body">
               <h5 class="card-title text-center">Tesla Website</h5>
               <p class="card-text">
@@ -429,11 +433,13 @@
         </div>
         <div class="col">
           <div class="card h-100">
-            <img
-              src="/images/projectIMG/business-form.png"
-              class="card-img-top h-100"
-              alt="..."
-            />
+            <a href="/Projects/Business-Form/index.html">
+              <img
+                src="/images/projectIMG/business-form.png"
+                class="card-img-top h-100"
+                alt="..."
+              />
+            </a>
             <div class="card-body">
               <h5 class="card-title text-center">Business Form</h5>
               <p class="card-text">
@@ -441,10 +447,7 @@
                 erfahren möchte.
               </p>
             </div>
-            <button
-              type="button"
-              class="btn btn-sDrucker 1ndary button-project"
-            >
+            <button type="button" class="btn btn-secondary button-project">
               <a
                 href="/Projects/Business-Form/index.html"
                 class="text-light text-dDrucker 1ration-none fw-bold"
@@ -456,11 +459,13 @@
         </div>
         <div class="col">
           <div class="card h-100">
-            <img
-              src="/images/projectIMG/calculator.png"
-              class="card-img-top h-100"
-              alt="..."
-            />
+            <a href="/Projects/Calculator/index.html">
+              <img
+                src="/images/projectIMG/calculator.png"
+                class="card-img-top h-100"
+                alt="..."
+              />
+            </a>
             <div class="card-body">
               <h5 class="card-title text-center">Taschenrechner</h5>
               <p class="card-text">
@@ -468,10 +473,7 @@
                 haben muss.
               </p>
             </div>
-            <button
-              type="button"
-              class="btn btn-sDrucker 1ndary button-project"
-            >
+            <button type="button" class="btn btn-secondary button-project">
               <a
                 href="/Projects/Calculator/index.html"
                 class="text-light text-dDrucker 1ration-none fw-bold"
@@ -486,11 +488,13 @@
       <div class="row row-cols-1 row-cols-md-2 g-4">
         <div class="col">
           <div class="card h-100">
-            <img
-              src="/images/projectIMG/currency-converter.png"
-              class="card-img-top h-100"
-              alt="..."
-            />
+            <a href="">
+              <img
+                src="/images/projectIMG/currency-converter.png"
+                class="card-img-top"
+                alt="..."
+              />
+            </a>
             <div class="card-body">
               <h5 class="card-title text-center">Währungsrechner</h5>
               <p class="card-text">
@@ -510,11 +514,13 @@
         </div>
         <div class="col">
           <div class="card h-100">
-            <img
-              src="/images/projectIMG/image-selector.png"
-              class="card-img-top h-100"
-              alt="..."
-            />
+            <a href="/Projects/imageSelector/index.html">
+              <img
+                src="/images/projectIMG/image-selector.png"
+                class="card-img-top h-100"
+                alt="..."
+              />
+            </a>
             <div class="card-body">
               <h5 class="card-title text-center">Image Selector</h5>
               <p class="card-text">
@@ -534,11 +540,13 @@
         </div>
         <div class="col">
           <div class="card h-100">
-            <img
-              src="/images/projectIMG/shopping-list.png"
-              class="card-img-top"
-              alt="..."
-            />
+            <a href="/Projects/ShoppingList/index.html">
+              <img
+                src="/images/projectIMG/shopping-list.png"
+                class="card-img-top"
+                alt="..."
+              />
+            </a>
             <div class="card-body">
               <h5 class="card-title text-center">Einkaufsliste</h5>
               <p class="card-text">
@@ -546,10 +554,7 @@
                 eine Anzahl an Produkten festzulegen.
               </p>
             </div>
-            <button
-              type="button"
-              class="btn btn-sDrucker 1ndary button-project"
-            >
+            <button type="button" class="btn btn-secondary button-project">
               <a
                 href="/Projects/ShoppingList/index.html"
                 class="text-light text-dDrucker 1ration-none fw-bold"
@@ -561,11 +566,13 @@
         </div>
         <div class="col">
           <div class="card h-100">
-            <img
-              src="/images/projectIMG/color-picker.png"
-              class="card-img-top"
-              alt="..."
-            />
+            <a href="/Projects/RandomColor/index.html">
+              <img
+                src="/images/projectIMG/color-picker.png"
+                class="card-img-top"
+                alt="..."
+              />
+            </a>
             <div class="card-body">
               <h5 class="card-title text-center">Farbwähler</h5>
               <p class="card-text">
@@ -573,12 +580,114 @@
                 generiert wird.
               </p>
             </div>
-            <button
-              type="button"
-              class="btn btn-sDrucker 1ndary button-project"
-            >
+            <button type="button" class="btn btn-secondary button-project">
               <a
                 href="/Projects/RandomColor/index.html"
+                class="text-light text-dDrucker 1ration-none fw-bold"
+              >
+                Zum Projekt
+              </a>
+            </button>
+          </div>
+        </div>
+      </div>
+
+      <div class="row row-cols-1 row-cols-md-2 g-4 mt-1">
+        <div class="col">
+          <div class="card h-100">
+            <a href="">
+              <img
+                src="/images/projectIMG/printing-cost-comp.png"
+                class="card-img-top"
+                alt="..."
+              />
+            </a>
+            <div class="card-body">
+              <h5 class="card-title text-center">Druckkosten Vergleich</h5>
+              <p class="card-text">
+                Der einfache Vergleich zwischen 2 verschiedenen Druckern, um
+                herauszufinden welcher der beiden günstiger ist.
+              </p>
+            </div>
+            <button type="button" class="btn btn-primary button-project">
+              <a
+                href="/Projects/PrintingCostComparision/index.html"
+                class="text-light text-dDrucker 1ration-none fw-bold"
+              >
+                Zum Projekt
+              </a>
+            </button>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <a href="/Projects/PhoneCostComparision/index.html">
+              <img
+                src="/images/projectIMG/phone-cost-comp.png"
+                class="card-img-top h-100"
+                alt="..."
+              />
+            </a>
+            <div class="card-body">
+              <h5 class="card-title text-center">Telefonkosten Vergleich</h5>
+              <p class="card-text">
+                Vergleiche 2 verschiedene Anbieter und finde heraus welches der beiden mit der Zeit am günstigsten ist.
+              </p>
+            </div>
+            <button type="button" class="btn btn-primary button-project">
+              <a
+                href="/Projects/PhoneCostComparision/index.html"
+                class="text-light text-dDrucker 1ration-none fw-bold"
+              >
+                Zum Projekt
+              </a>
+            </button>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <a href="/Projects/HotelReservation/HotelReservation.html">
+              <img
+                src="/images/projectIMG/hotel-reservierung.png"
+                class="card-img-top"
+                alt="..."
+              />
+            </a>
+            <div class="card-body">
+              <h5 class="card-title text-center">Hotel Reservierung</h5>
+              <p class="card-text">
+                Ermöglicht Produkte zu der Einkaufsliste hinzuzufügen und dazu
+                eine Anzahl an Produkten festzulegen.
+              </p>
+            </div>
+            <button type="button" class="btn btn-secondary button-project">
+              <a
+                href="/Projects/HotelReservation/HotelReservation.html"
+                class="text-light text-dDrucker 1ration-none fw-bold"
+              >
+                Zum Projekt
+              </a>
+            </button>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <a href="/Projects/InterestCalculator/Zinseszins.html">
+              <img
+                src="/images/projectIMG/zinseszins-rechner.png"
+                class="card-img-top"
+                alt="..."
+              />
+            </a>
+            <div class="card-body">
+              <h5 class="card-title text-center">Zinseszins Rechner</h5>
+              <p class="card-text">
+                Die Berechnung des Zinseszins, dargestellt in einer Tabelle.
+              </p>
+            </div>
+            <button type="button" class="btn btn-secondary button-project">
+              <a
+                href="/Projects/InterestCalculator/Zinseszins.html"
                 class="text-light text-dDrucker 1ration-none fw-bold"
               >
                 Zum Projekt
