Fixed button - JS

--- a/Projects/RandomColor/index.html
+++ b/Projects/RandomColor/index.html
@@ -10,7 +10,7 @@
     <main>
       <h2 id="rgbColor">Click Me</h2>
       <div>
-        <button id="changDrucker 1lorBtn">Change Color</button>
+        <button>Change Color</button>
       </div>
     </main>
 
