Fixed button on smaler devices

--- a/index.html
+++ b/index.html
@@ -142,15 +142,18 @@
               in die Backend-Entwicklung einzuarbeiten.
             </p>
 
-            <div class="bg-secondary rounded w-50" id="startseite-button">
-              <a href="mailto:latifakan1999@gmail.com" class="text-light">
-                <button
-                  type="button"
-                  class="fw-bold btn btn-primary button-project text-decoration-none w-100"
-                >
-                  Kontakt
-                </button>
-              </a>
+            <div id="startseite-button">
+              <div class="bg-secondary rounded w-50">
+                <a href="mailto:latifakan1999@gmail.com" class="text-light">
+                  <button
+                    type="button"
+                    class="fw-bold btn btn-primary button-project text-decoration-none w-100"
+                  >
+                    Kontakt
+                  </button>
+                </a>
+              </div>
+
             </div>
           </div>
           <!-- <div
@@ -371,7 +374,7 @@
               auseinanderzusetzen.
             </p>
           </blockquote>
-          <div class="container text-center d-flex">
+          <div class="container text-center d-flex d-flex justify-content-center">
             <button class="btn btn-primary" onclick="openPDF()">
               Lebenslauf anzeigen
             </button>
