added kanban project

--- a/Projects/PhoneCostComparision/index.html
+++ b/Projects/PhoneCostComparision/index.html
@@ -11,7 +11,7 @@
 
   <body>
     <main>
-      <h1>Telefonanbietervergleich</h1>
+      <h1>Telefonkosten-Vergleich</h1>
       <div id="input">
         <h2>Anbieter A</h2>
 
