--- a/Projects/RandomColor/index.html
+++ b/Projects/RandomColor/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <main>
-      <h2 id="rgbColor">Click Me</h2>
+      <h2>Click Me</h2>
       <div>
         <button>Change Color</button>
       </div>
