--- a/index.html
+++ b/index.html
@@ -153,7 +153,6 @@
                   </button>
                 </a>
               </div>
-
             </div>
           </div>
           <!-- <div
@@ -374,7 +373,9 @@
               auseinanderzusetzen.
             </p>
           </blockquote>
-          <div class="container text-center d-flex d-flex justify-content-center">
+          <div
+            class="container text-center d-flex d-flex justify-content-center"
+          >
             <button class="btn btn-primary" onclick="openPDF()">
               Lebenslauf anzeigen
             </button>
@@ -574,18 +575,18 @@
           </div>
           <div class="col">
             <div class="card h-100" id="card-color">
-              <a href="/Projects/Business-Form/index.html">
+              <a href="/Projects/kanban/index.html">
                 <img
-                  src="/images/projectIMG/business-form.png"
+                  src="/images/projectIMG/kanban.png"
                   class="card-img-top h-100"
                   alt="..."
                 />
               </a>
               <div class="card-body">
-                <h5 class="card-title text-center">Business Form</h5>
+                <h5 class="card-title text-center">Kanban Todo-Board</h5>
                 <p class="card-text">
-                  Ein kleines Formular, wo ich zu einem Unternehmen die Fakten
-                  erfahren möchte.
+                  Ein Kanban-Board um Aufgaben aufzulisten und diese mit todo,
+                  in-progress und done zu erledigen
                 </p>
               </div>
               <div class="bg-secondary rounded">
