updated index file, adding kanban project link

--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@
                 </p>
               </div>
               <div class="bg-secondary rounded">
-                <a href="/Projects/Business-Form/index.html" class="text-light">
+                <a href="/Projects/kanban/index.html" class="text-light">
                   <button
                     type="button"
                     class="fw-bold btn btn-secondary button-project text-decoration-none w-100"
